--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build": "run-s clean build:*",
     "build:js": "rollup -c",
     "watch": "run-s 'build:js -- --watch'",
+    "generate:readme": "doctoc README.md --entryprefix '*'",
     "prepublishOnly": "run-s build",
     "greenkeeper:update-lockfile": "greenkeeper-lockfile-update",
     "greenkeeper:upload-lockfile": "greenkeeper-lockfile-upload"
@@ -36,6 +37,7 @@
     "codecov": "3.0.2",
     "commitlint-config-gain": "1.0.5",
     "cz-conventional-changelog": "2.1.0",
+    "doctoc": "^1.3.1",
     "greenkeeper-lockfile": "1.15.0",
     "husky": "1.0.0-rc.6",
     "npm-run-all": "4.1.3",
