build(dependencies): captured the presets/plugins

--- a/package.json
+++ b/package.json
@@ -44,5 +44,10 @@
     "nyc": "11.8.0",
     "rimraf": "2.6.2",
     "rollup": "0.59.1"
+  },
+  "dependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1"
   }
 }
