--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "clean": "rimraf lib/",
     "lint:js": "eslint . --cache",
-    "lint:travis": "travis lint --no-interactive",
+    "lint:travis": "travis-lint .travis.yml",
     "test": "run-s lint:*",
     "build": "run-s clean build:*",
     "build:js": "rollup -c",
@@ -35,7 +35,7 @@
     "babel-preset-travi": "1.3.1",
     "babel-register": "6.26.0",
     "codecov": "3.0.4",
-    "commitlint-config-gain": "1.0.6",
+    "commitlint-config-gain": "^1.0.6",
     "cz-conventional-changelog": "2.1.0",
     "doctoc": "^1.3.1",
     "greenkeeper-lockfile": "1.15.1",
@@ -43,7 +43,8 @@
     "npm-run-all": "4.1.3",
     "nyc": "12.0.2",
     "rimraf": "2.6.2",
-    "rollup": "0.63.2"
+    "rollup": "0.63.2",
+    "travis-lint": "^1.0.0"
   },
   "dependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
