--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "cz-conventional-changelog": "2.1.0",
     "doctoc": "^1.3.1",
     "greenkeeper-lockfile": "1.15.1",
-    "husky": "1.0.0-rc.6",
+    "husky": "^1.0.0-rc.13",
     "npm-run-all": "4.1.3",
     "nyc": "12.0.2",
     "rimraf": "2.6.2",
