--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "travis-lint": "^1.0.0"
   },
   "dependencies": {
+    "babel-plugin-inline-react-svg": "^0.5.3",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1"
