--- a/package.json
+++ b/package.json
@@ -31,9 +31,8 @@
     }
   },
   "devDependencies": {
+    "@babel/register": "7.0.0",
     "@gaincompliance/eslint-config-gain": "0.7.12",
-    "babel-preset-travi": "1.3.1",
-    "babel-register": "6.26.0",
     "codecov": "3.0.4",
     "commitlint-config-gain": "^1.0.6",
     "cz-conventional-changelog": "2.1.0",
@@ -47,10 +46,9 @@
     "travis-lint": "^1.0.0"
   },
   "dependencies": {
-    "babel-plugin-inline-react-svg": "^0.5.3",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1"
+    "@babel/plugin-proposal-class-properties": "7.1.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0",
+    "@babel/preset-env": "7.1.0",
+    "@babel/preset-react": "7.0.0"
   }
 }
