--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "build:js": "rollup -c",
     "watch": "run-s 'build:js -- --watch'",
     "generate:readme": "doctoc README.md --entryprefix '*'",
-    "prepublishOnly": "run-s build",
-    "greenkeeper:update-lockfile": "greenkeeper-lockfile-update",
-    "greenkeeper:upload-lockfile": "greenkeeper-lockfile-upload"
+    "prepack": "run-s build"
   },
   "publishConfig": {
     "access": "public"
@@ -38,7 +36,6 @@
     "commitlint-config-gain": "^1.0.6",
     "cz-conventional-changelog": "2.1.0",
     "doctoc": "^1.3.1",
-    "greenkeeper-lockfile": "1.15.1",
     "husky": "^1.0.0-rc.13",
     "npm-run-all": "4.1.3",
     "nyc": "12.0.2",
