--- a/package.json
+++ b/package.json
@@ -29,14 +29,13 @@
     }
   },
   "devDependencies": {
-    "@gaincompliance/eslint-config-gain": "0.7.12",
-    "babel-preset-travi": "1.3.1",
+    "@gaincompliance/eslint-config-gain": "^0.7.12",
     "babel-register": "6.26.0",
-    "codecov": "3.0.4",
+    "codecov": "^3.1.0",
     "commitlint-config-gain": "^1.0.6",
     "cz-conventional-changelog": "2.1.0",
     "doctoc": "^1.3.1",
-    "husky": "^1.0.0-rc.13",
+    "husky": "^1.1.1",
     "npm-run-all": "4.1.3",
     "nyc": "12.0.2",
     "rimraf": "2.6.2",
