fix(babel-7): downgraded the svg plugin
since it would require babel v7, which the rest of the preset has not been updated for

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ notifications:
 branches:
   except:
   - "/^v\\d+\\.\\d+\\.\\d+$/"
+before_script: npm ls >/dev/null
 deploy:
   provider: script
   skip_cleanup: true
