--- a/package.json
+++ b/package.json
@@ -39,13 +39,15 @@
     "nyc": "12.0.2",
     "rimraf": "2.6.2",
     "rollup": "0.67.1",
+    "rollup-plugin-auto-external": "^2.0.0",
     "travis-lint": "^1.0.0"
   },
   "dependencies": {
-    "babel-plugin-inline-react-svg": "^0.5.3",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1"
+    "@babel/core": "^7.1.6",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-react": "^7.0.0",
+    "babel-plugin-inline-react-svg": "^0.5.3"
   }
 }
