--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "commitlint-config-gain": "^1.0.6",
     "cz-conventional-changelog": "2.1.0",
     "doctoc": "^1.3.1",
-    "husky": "^1.1.1",
+    "husky": "^1.1.4",
     "npm-run-all": "4.1.3",
-    "nyc": "12.0.2",
+    "nyc": "^13.1.0",
     "rimraf": "2.6.2",
     "rollup": "0.67.1",
     "rollup-plugin-auto-external": "^2.0.0",
@@ -53,6 +53,6 @@
     "@babel/preset-react": "^7.0.0",
     "babel-plugin-dynamic-import-node": "^2.2.0",
     "babel-plugin-extensible-destructuring": "^4.2.3",
-    "babel-plugin-inline-react-svg": "^0.5.3"
+    "babel-plugin-inline-react-svg": "^1.0.1"
   }
 }
