--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-plugin-dynamic-import-node": "^2.2.0",
     "babel-plugin-extensible-destructuring": "^4.2.3",
-    "babel-plugin-inline-react-svg": "^1.0.1"
+    "babel-plugin-inline-react-svg": "^1.0.1",
+    "extensible-runtime": "^4.1.0"
   }
 }
