--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,9 @@ before_script: npm ls --production >/dev/null
 deploy:
   provider: script
   skip_cleanup: true
-  script: npx semantic-release
+  script: npx semantic-release@beta
+  on:
+    all_branches: true
 env:
   global:
   - FORCE_COLOR=1
