--- a/package.json
+++ b/package.json
@@ -51,9 +51,11 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
+    "@emotion/babel-preset-css-prop": "^10.0.7",
     "babel-plugin-dynamic-import-node": "^2.2.0",
     "babel-plugin-extensible-destructuring": "^4.2.3",
     "babel-plugin-inline-react-svg": "^1.0.1",
+    "babel-plugin-polished": "^1.1.0",
     "extensible-runtime": "^4.1.0"
   }
 }
