--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "clean": "rimraf lib/",
     "lint:js": "eslint . --cache",
     "lint:travis": "travis-lint .travis.yml",
-    "test": "run-s lint:*",
+    "test": "npm-run-all --print-label clean --parallel lint:* --parallel test:*",
+    "test:unit": "DEBUG=any mocha test/unit",
     "build": "run-s clean build:*",
     "build:js": "rollup -c",
     "watch": "run-s 'build:js -- --watch'",
@@ -32,12 +33,15 @@
     }
   },
   "devDependencies": {
+    "@babel/register": "^7.4.0",
     "@gaincompliance/eslint-config-gain": "^1.0.21",
+    "chai": "^4.2.0",
     "codecov": "^3.1.0",
     "commitlint-config-gain": "^1.0.6",
     "cz-conventional-changelog": "2.1.0",
     "doctoc": "^1.3.1",
     "husky": "^1.1.4",
+    "mocha": "^6.1.3",
     "npm-run-all": "4.1.5",
     "nyc": "^13.3.0",
     "rimraf": "2.6.3",
