ci(dpl): opted into v2
since the linter now compares against that spec

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ branches:
 before_script: npm ls --production >/dev/null
 deploy:
   provider: script
-  skip_cleanup: true
+  edge: true
   script: npx semantic-release@beta
   on:
     all_branches: true
