--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clean": "rimraf lib/",
     "lint:js": "eslint . --cache",
     "lint:travis": "travis-lint .travis.yml",
+    "lint:peer": "npm ls >/dev/null",
     "test": "npm-run-all --print-label clean --parallel lint:* --parallel test:*",
     "test:unit": "DEBUG=any mocha test/unit",
     "build": "run-s clean build:*",
@@ -36,7 +37,7 @@
     "@babel/register": "^7.4.0",
     "@gaincompliance/eslint-config-gain": "^1.0.21",
     "chai": "^4.2.0",
-    "codecov": "^3.1.0",
+    "codecov": "^3.6.2",
     "commitlint-config-gain": "^1.0.6",
     "cz-conventional-changelog": "3.1.0",
     "doctoc": "^1.3.1",
