test(eslint): upgraded to the modern config

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   },
   "devDependencies": {
     "@babel/register": "^7.4.0",
-    "@gaincompliance/eslint-config-gain": "^1.0.21",
+    "@gaincompliance/eslint-config": "1.0.28",
+    "@gaincompliance/eslint-config-mocha": "1.0.7",
     "chai": "^4.2.0",
     "codecov": "^3.6.2",
     "commitlint-config-gain": "^1.0.6",
